namespace.yml
# namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-contacts-app
