app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-app
  namespace: prod-contacts-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: contact-app
  template:
    metadata:
      labels:
        app: contact-app
    spec:
      containers:
        - name: contact-app
          image: sbmitra/contacts-app:2.0
          ports:
            - containerPort: 5000
      hostAliases:
        - ip: "192.168.0.163" # <-- UPDATED IP ADDRESS
          hostnames:
            - "host.docker.internal"
