app-service.yml
# app-service-revised.yml
apiVersion: v1
kind: Service
metadata:
  name: contact-app-service
  namespace: prod-contacts-app # <-- ADDED NAMESPACE
spec:
  selector:
    app: contact-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
